# cleancloud

./: CONTRIBUTING.md  LICENSE  MAINTAINERS.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  pytest.ini
.github/: CODEOWNERS
.github/workflows/: compliance-verification.yml  main-validation.yml  pr-checks.yml  release.yml  security-scan.yml
cleancloud/: cleancloud.yaml  cli.py  exit_policy.py
cleancloud/config/: defaults.py  loader.py  schema.py
cleancloud/core/: confidence.py  evidence.py  finding.py  risk.py
cleancloud/doctor/: __init__.py  aws.py  azure.py  command.py  common.py  runner.py
cleancloud/filtering/: tags.py
cleancloud/models/: confidence.py  finding.py
cleancloud/output/: csv.py  feedback.py  human.py  json.py  progress.py  summary.py
cleancloud/policies/: aws.py  azure.py  common.py
cleancloud/policy/: exit_policy.py
cleancloud/providers/aws/: doctor.py  scan.py  session.py  validate.py
cleancloud/providers/aws/rules/: cloudwatch_inactive.py  ebs_snapshot_old.py  ebs_unattached.py  elastic_ip_unattached.py  eni_detached.py  untagged_resources.py
cleancloud/providers/azure/: doctor.py  scan.py  session.py  validate.py
cleancloud/providers/azure/rules/: ebs_snapshots_old.py  public_ip_unused.py  unattached_managed_disks.py  untagged_resources.py
cleancloud/scan/: command.py
cleancloud/security/: aws-readonly-policy.json
docs/: aws.md  azure.md  ci.md  confidence.md  design.md  infosec-readiness.md  rule_config.md  rules.md  versioning.md  what-is-cleancloud.md  why-no-auto-delete.md
outputs/: scan.csv  scan.json
schemas/: output-v1.0.0.json
security/: README.md  aws-readonly-policy.json  verify-aws-policy.sh  verify-azure-role.sh
tests/: conftest.py
tests/cleancloud/: test_exit_policy.py  test_output_schema.py
tests/cleancloud/cli/: test_cli_tag_precedence.py  test_scan_exit_codes.py
tests/cleancloud/filtering/: test_tags.py
tests/cleancloud/providers/aws/: test_aws_cloudwatch_inactive.py  test_aws_ebs_snapshot_old.py  test_aws_ebs_unattached.py  test_aws_elastic_ip_unattached.py  test_aws_eni_detached.py  test_aws_untagged_resources.py
tests/cleancloud/providers/azure/: test_azure_ebs_snapshots_old.py  test_azure_public_ip_unused.py  test_azure_unattached_managed_disks.py  (+1 more)
tests/e2e/aws/: test_aws_auth.py  test_aws_cli_scan.py  test_aws_rules_smoke.py
tests/e2e/azure/: test_azure_auth.py  test_azure_cli_scan.py  test_azure_rules_smoke.py
